--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,30 @@
 {
   "compilerOptions": {
-    "target": "es2020",
+    "target": "es2021",
     "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "allowJs": true,
     "strict": true,
+    "esModuleInterop": true,
+    "outDir": "dist",
+    "declaration": true,
+    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "resolveJsonModule": true
-  }
+  },
+  "include": [
+    "./scripts/**/*.js",
+    "./scripts/**/*.ts",
+    "./deploy/**/*.js",
+    "./deploy/**/*.ts",
+    "./test/**/*.js",
+    "./test/**/*.ts",
+    "./typechain-types/**/*.ts"
+  ],
+  "files": [
+    "hardhat.config.ts",
+    "deploy-args.ts",
+    "eslint.config.js",
+    "arguments.js",
+    ".solcover.js"
+  ]
 }
