--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@nomicfoundation/hardhat-ignition-ethers": "^0.15.5",
     "@nomicfoundation/hardhat-ledger": "^1.0.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.9",
     "@nomicfoundation/hardhat-viem": "^2.0.4",
@@ -85,5 +86,8 @@
     "typescript-eslint": "^8.3.0",
     "viem": "^2.21.5",
     "xdeployer": "^3.0.16"
+  },
+  "dependencies": {
+    "network-helpers": "link:@nomicfoundation/hardhat-toolbox/network-helpers"
   }
 }
