--- a/foundry.toml
+++ b/foundry.toml
@@ -1,9 +1,9 @@
 # Defaults for all profiles.
 [profile.default]
-src = "src"                                               # Set the source directory.
-test = "test"                                             # Set the test directory.
-out = "forge-artifacts"                                   # Set the output directory for the artifacts.
-libs = ["lib"]                                     # Configure an array of library directories.
+src = "src"                                               # Set the source directory.                                # Set the test directory.
+out = "out"                                                 # Set the output directory for the artifacts.
+libs = ["lib"]  
+test = "test"                                               # Configure an array of library directories.
 cache = true                                              # Enable caching.
 cache_path = "cache"                                      # Set the path to the cache.
 force = false                                             # Do not ignore the cache.
