--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "@types/chai": "^4.3.19",
     "@types/mocha": "^10.0.7",
     "@types/node": "^22.5.1",
+    "ds-test": "https://github.com/dapphub/ds-test",
+    "forge-std": "https://github.com/foundry-rs/forge-std.git#v1.7.6",
     "chai": "^4.5.0",
     "eslint": "^9.9.1",
     "eslint-config-prettier": "^9.1.0",
@@ -86,8 +88,5 @@
     "typescript-eslint": "^8.3.0",
     "viem": "^2.21.5",
     "xdeployer": "^3.0.16"
-  },
-  "dependencies": {
-    "network-helpers": "link:@nomicfoundation/hardhat-toolbox/network-helpers"
   }
 }
